--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <meta charset="UTF-8" />
+  <title>Страница не найдена (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+    .rails-default-error-page {
+      background-color: #0493cf;
+      color: #333;
+      text-align: center;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 18px;
+      line-height: 1.3;
+      margin: 0;
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    .logo {
+      margin: 32px 0;
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .dialog {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 32px 16px;
+      background-color: #fff;
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    .rails-default-error-page h1 {
+      margin: 0 0 32px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 36px;
+      font-weight: normal;
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .rails-default-error-page p {
+      margin: 0 0 16px;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 16px 32px;
+      border-radius: 1px;
+      background-color: #ff6666;
+      color: #fff;
+      text-decoration: none;
+    }
   </style>
 </head>
 
 <body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+<div class="logo">
+  <img src="/content/logo-2018.png" width="160" height="160" />
+</div>
+<div class="dialog">
+  <div>
+    <h1>Страница не найдена</h1>
+    <p>Возможно, вы перешли по неправильной ссылке.</p>
   </div>
+  <br>
+  <p>
+    <a class="btn" href="/">Вернуться на главную</a>
+  </p>
+</div>
 </body>
 </html>
