--- a/public/500.html
+++ b/public/500.html
@@ -50,7 +50,7 @@
 
 <body class="rails-default-error-page">
 <div class="logo">
-  <img src="/content/logo-2018-new.png" />
+  <img src="/content/logo-2018-new-new-new.png" />
 </div>
 <div class="dialog">
   <div>
